--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
     <artifactId>MDServer</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <restlet-version>2.3.1</restlet-version>
+    </properties>
+
     <repositories>
 
         <repository>
@@ -35,6 +39,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
             <version>2.7.1</version>
@@ -52,6 +62,7 @@
             <artifactId>org.restlet</artifactId>
             <version>2.2-RC4</version>
         </dependency>
+
         <dependency>
             <groupId>org.restlet.jse</groupId>
             <artifactId>org.restlet.ext.simple</artifactId>
@@ -63,10 +74,17 @@
             <artifactId>log4j-api</artifactId>
             <version>2.3</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>2.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.restlet.jse</groupId>
+            <artifactId>org.restlet.ext.jackson</artifactId>
+            <version>${restlet-version}</version>
         </dependency>
 
     </dependencies>
@@ -87,8 +105,6 @@
             </plugin>
         </plugins>
     </build>
-
-
 
 
 </project>
