--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
             <version>${restlet-version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+        </dependency>
+
     </dependencies>
 
     <build>
